Commit: Fixed clock alignment and desktop icon loading across all active panels Clock still white for some reason

--- a/style.css
+++ b/style.css
@@ -90,20 +90,20 @@ a{
 .close2{
     position:absolute;
     top: 6.5%;
-    left: 95%;
+    left: 97%;
     width: 2%;
     height: 2.3%;
 }
 .multiplayerWindow{
     position: absolute;
     top: 6%;
-    left: 5%;
+    left: 7.4%;
     height: 70%;
 }
 .serverInfo{
     text-align: left;
     position: absolute;
-    left: 16%;
+    left: 20%;
     top: 19%;
     height: 37%;
     width: 70%;
@@ -131,11 +131,12 @@ a{
     top: 0.5%;
 }
 #clock{
+    color: black;
     height:3.5%;
     width: 9.8%;
     position: absolute;
     left: 90%;
-    top: 96%;
+    top: 94%;
     text-align: center;
     font-size: 10pt;
     font-family: sans-serif;
@@ -190,7 +191,7 @@ hr{
 #sidetext{
     color:white;
     position:absolute;
-    left:0;
+    left: 0px;
     height: 100%;
     width: 10%;
     background: rgb(1,8,129);
@@ -202,4 +203,5 @@ hr{
     -webkit-transform: scale(-1,-1);
     position: absolute;
     bottom: 0.5vh;
+    right: 3px;
 }
